# example-elevenlabs

./: .gitignore  README.md  pyproject.toml  schedule_workflow.py  schedule_workflow_audio_isolation.py
src/: client.py  services.py
src/functions/: function.py
src/workflows/: workflow.py
