# Project metadata
[tool.poetry]
name = "Elvenlabs"
version = "0.0.1"
description = "A simple example to get started with the restack-ai SDK with elevenlabs"
authors = [
    "Restack Team <service@restack.io>",
]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
restack-ai = "0.0.47"
watchfiles = "^1.0.0"
elevenlabs = "^0.2.16"  
[tool.poetry.dev-dependencies]
pytest = "6.2"  # Optional: Add if you want to include tests in your example

# Build system configuration
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# CLI command configuration
[tool.poetry.scripts]
dev = "src.services:watch_services"
services = "src.services:run_services"
text_to_speech = "schedule_workflow:run_schedule_workflow"
voice_isolation = "schedule_workflow_audio_isolation:run_schedule_workflow_audio_isolation"
